Closed Bug 1807879 Opened 1 year ago Closed 1 year ago

SheetLoadData destructor missing ifdef MOZ_DIAGNOSTIC_ASSERT_ENABLED

Categories

(Core :: CSS Parsing and Computation, defect)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
110 Branch
Tracking Status
firefox-esr102 --- fixed
firefox108 --- unaffected
firefox109 --- fixed
firefox110 --- fixed

People

(Reporter: WeirdAl, Assigned: kershaw)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(1 file)

I stumbled across this entirely by accident, with an experimental project.

It was changed to a release assert in https://hg.mozilla.org/mozilla-central/rev/17e0bbb609a9 without changing the members. Was that intentional?

Flags: needinfo?(kershaw)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)

It was changed to a release assert in https://hg.mozilla.org/mozilla-central/rev/17e0bbb609a9 without changing the members. Was that intentional?

No, that's my bad. I was not aware of that two members are inside MOZ_DIAGNOSTIC_ASSERT_ENABLED.
I'll submit a patch soon.

Flags: needinfo?(kershaw)
Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Regressed by: 1769635
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/94b122e08b2b
Remove MOZ_DIAGNOSTIC_ASSERT_ENABLED for mSheetCompleteCalled and mIntentionallyDropped, r=emilio DONTBUILD
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch

I've confirmed this works with my experimental project. Thanks for the quick turnaround!

Status: RESOLVED → VERIFIED

Comment on attachment 9310080 [details]
Bug 1807879 - Remove MOZ_DIAGNOSTIC_ASSERT_ENABLED for mSheetCompleteCalled and mIntentionallyDropped, r=emilio

Approved for 109.0b8 and 102.7esr.

Attachment #9310080 - Flags: approval-mozilla-esr102+
Attachment #9310080 - Flags: approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: