Bug 1807879 - Remove MOZ_DIAGNOSTIC_ASSERT_ENABLED for mSheetCompleteCalled and mIntentionallyDropped, r=emilio a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D165658